--- a/BoutiqueEnLigne/styles.css
+++ b/BoutiqueEnLigne/styles.css
@@ -1,11 +1,11 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #f7f7f7;
+    background-color: #232020;
     color: #333;
 }
 
